# papaper

./: .gitignore  CHANGELOG  LICENSE  README.md  README.rst  __main__.py  pyproject.toml  python310._pth
papaper/: main.bat
src/papaper/: __main__.py  app.py  embedding.py  paper.py
